bad/div_invalid_types_array_null.example_compiler_output
ERROR
[1mbad/div_invalid_types_array_null.lat:3:13: [1;31merror: [0;1mdivision is defined only for int values, not `int[]` and `null`[m
	new int[3] / null;
	           [1;32m^[m
